canlyse.output
Terminaux inutilisés dans la grammaire

   PARENTHESE_GAUCHE
   PARENTHESE_DROITE
   CHARTYPE
   OPERATOR_MOD
   PUNCTUATOR_COLON


État 72 conflits: 1 décalage/réduction
État 138 conflits: 3 réduction/réduction
État 189 conflits: 2 réduction/réduction
État 196 conflits: 1 décalage/réduction
État 309 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Programe $end

    1 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON main_struct
    2         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON type_struct var_struct functions_struct main_struct
    3         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON var_struct functions_struct main_struct
    4         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON functions_struct main_struct
    5         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON type_struct var_struct main_struct
    6         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON var_struct main_struct

    7 main_struct: MAIN Action_main

    8 Action_main: PUNCTUATOR_OPEN_CURLY instList PUNCTUATOR_CLOSE_CURLY
    9            | inst

   10 return_statement: return_statement_int
   11                 | return_statement_double
   12                 | return_statement_string
   13                 | return_statement_char

   14 type_struct: TYPE Action_type

   15 Action_type: PUNCTUATOR_OPEN_CURLY instList_type PUNCTUATOR_CLOSE_CURLY
   16            | inst_type

   17 instList_type: instList_type inst_type
   18              | inst_type

   19 inst_type: STRUCT IDENTIFIER PUNCTUATOR_OPEN_CURLY instList_var PUNCTUATOR_CLOSE_CURLY PUNCTUATOR_SEMICOLON

   20 var_struct: VAR Action_var

   21 Action_var: PUNCTUATOR_OPEN_CURLY instList_var PUNCTUATOR_CLOSE_CURLY
   22           | inst_var

   23 instList_var: instList_var inst_var
   24             | inst_var

   25 inst_var: INT declaration_entier PUNCTUATOR_SEMICOLON
   26         | CHAR declaration_char PUNCTUATOR_SEMICOLON
   27         | DOUBLE declaration_real PUNCTUATOR_SEMICOLON
   28         | STRINGTYPE declaration_string PUNCTUATOR_SEMICOLON
   29         | BOOL declaration_bool PUNCTUATOR_SEMICOLON
   30         | CONST declaration_const PUNCTUATOR_SEMICOLON
   31         | INT declaration_tabint PUNCTUATOR_SEMICOLON
   32         | DOUBLE declaration_tabreal PUNCTUATOR_SEMICOLON
   33         | STRINGTYPE declaration_tabstring PUNCTUATOR_SEMICOLON
   34         | CHAR declaration_tabchar PUNCTUATOR_SEMICOLON
   35         | BOOL declaration_tabbool PUNCTUATOR_SEMICOLON

   36 declaration_entier: declaration_entier PUNCTUATOR_COMMA IDENTIFIER
   37                   | declaration_entier PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN Expression
   38                   | IDENTIFIER
   39                   | IDENTIFIER PUNCTUATOR_ASSIGN Expression

   40 declaration_char: declaration_char PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN CHAR
   41                 | declaration_char PUNCTUATOR_COMMA IDENTIFIER
   42                 | IDENTIFIER PUNCTUATOR_ASSIGN CHAR
   43                 | IDENTIFIER

   44 declaration_real: declaration_real PUNCTUATOR_COMMA IDENTIFIER
   45                 | declaration_real PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN Expression
   46                 | IDENTIFIER
   47                 | IDENTIFIER PUNCTUATOR_ASSIGN Expression

   48 declaration_string: declaration_string PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN CONSTSTRING
   49                   | declaration_string PUNCTUATOR_COMMA IDENTIFIER
   50                   | IDENTIFIER PUNCTUATOR_ASSIGN CONSTSTRING
   51                   | IDENTIFIER

   52 boolvalues: TRUEBOOL
   53           | FALSEBOOL

   54 declaration_bool: declaration_bool PUNCTUATOR_COMMA IDENTIFIER
   55                 | IDENTIFIER PUNCTUATOR_ASSIGN boolvalues
   56                 | IDENTIFIER
   57                 | declaration_bool PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN LogicExpression
   58                 | IDENTIFIER PUNCTUATOR_ASSIGN LogicExpression

   59 declaration_const: declaration_const PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN LogicExpression
   60                  | declaration_const PUNCTUATOR_COMMA IDENTIFIER PUNCTUATOR_ASSIGN Expression
   61                  | IDENTIFIER PUNCTUATOR_ASSIGN Expression
   62                  | IDENTIFIER PUNCTUATOR_ASSIGN LogicExpression

   63 declaration_tabint: IDENTIFIER PUNCTUATOR_OPEN_BRACKET Expression PUNCTUATOR_CLOSE_BRACKET
   64                   | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET
   65                   | IDENTIFIER PUNCTUATOR_OPEN_BRACKET PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_ASSIGN PUNCTUATOR_OPEN_BRACKET element_tabint PUNCTUATOR_CLOSE_BRACKET
   66                   | IDENTIFIER PUNCTUATOR_OPEN_BRACKET Expression PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET Expression PUNCTUATOR_CLOSE_BRACKET
   67                   | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET

   68 declaration_tabreal: IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET
   69                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_ASSIGN PUNCTUATOR_OPEN_BRACKET element_tabreal PUNCTUATOR_CLOSE_BRACKET
   70                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET

   71 declaration_tabstring: IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET
   72                      | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET

   73 declaration_tabchar: IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET
   74                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_ASSIGN PUNCTUATOR_OPEN_BRACKET element_tabchar PUNCTUATOR_CLOSE_BRACKET
   75                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET

   76 declaration_tabbool: IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET
   77                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_ASSIGN PUNCTUATOR_OPEN_BRACKET element_tabbool PUNCTUATOR_CLOSE_BRACKET
   78                    | IDENTIFIER PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET PUNCTUATOR_OPEN_BRACKET NUMBER PUNCTUATOR_CLOSE_BRACKET

   79 element_tabint: element_tabint PUNCTUATOR_COMMA NUMBER
   80               | element_tabint PUNCTUATOR_COMMA IDENTIFIER
   81               | NUMBER

   82 element_tabreal: element_tabreal PUNCTUATOR_COMMA REAL
   83                | element_tabreal PUNCTUATOR_COMMA IDENTIFIER
   84                | REAL

   85 element_tabchar: element_tabchar PUNCTUATOR_COMMA CHAR
   86                | element_tabchar PUNCTUATOR_COMMA IDENTIFIER
   87                | CHAR

   88 element_tabbool: element_tabbool PUNCTUATOR_COMMA boolvalues
   89                | element_tabbool PUNCTUATOR_COMMA IDENTIFIER
   90                | boolvalues

   91 $@1: %empty

   92 functions_struct: $@1 FUNCTIONS Action_function

   93 Action_function: PUNCTUATOR_OPEN_CURLY List_function PUNCTUATOR_CLOSE_CURLY
   94                | function

   95 List_function: List_function function
   96              | function

   97 $@2: %empty

   98 function: $@2 INT IDENTIFIER PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_OPEN_CURLY instList_function return_statement_int PUNCTUATOR_CLOSE_CURLY

   99 $@3: %empty

  100 function: $@3 DOUBLE IDENTIFIER PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_OPEN_CURLY instList_function return_statement_double PUNCTUATOR_CLOSE_CURLY

  101 $@4: %empty

  102 function: $@4 STRINGTYPE IDENTIFIER PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_OPEN_CURLY instList_function return_statement_string PUNCTUATOR_CLOSE_CURLY

  103 $@5: %empty

  104 function: $@5 CHAR IDENTIFIER PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_OPEN_CURLY instList_function return_statement_char PUNCTUATOR_CLOSE_CURLY

  105 $@6: %empty

  106 function: $@6 VOID IDENTIFIER PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_OPEN_CURLY instList_function PUNCTUATOR_CLOSE_CURLY

  107 instList_function: instList_function inst_function
  108                  | inst_function

  109 inst_function: inst
  110              | inst_var

  111 return_statement_int: RETURN NUMBER PUNCTUATOR_SEMICOLON

  112 return_statement_double: RETURN Expression PUNCTUATOR_SEMICOLON

  113 return_statement_string: RETURN CONSTSTRING PUNCTUATOR_SEMICOLON

  114 return_statement_char: RETURN CHAR PUNCTUATOR_SEMICOLON

  115 Action: PUNCTUATOR_OPEN_CURLY instList PUNCTUATOR_CLOSE_CURLY
  116       | inst

  117 FORDecalartion: IDENTIFIER PUNCTUATOR_ASSIGN NUMBER TO Expression

  118 instList: instList inst
  119         | inst

  120 inst: IDENTIFIER PUNCTUATOR_ASSIGN Expression PUNCTUATOR_SEMICOLON
  121     | IDENTIFIER PUNCTUATOR_ASSIGN LogicExpression PUNCTUATOR_SEMICOLON
  122     | IDENTIFIER OPERATOR_INCREMENTATION PUNCTUATOR_SEMICOLON
  123     | IDENTIFIER OPERATOR_DECREMENTATION PUNCTUATOR_SEMICOLON
  124     | READ PUNCTUATOR_OPEN_PARENTHESIS IDENTIFIER PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_SEMICOLON
  125     | WRITE PUNCTUATOR_OPEN_PARENTHESIS ParmetersList PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_SEMICOLON

  126 $@7: %empty

  127 inst: IF PUNCTUATOR_OPEN_PARENTHESIS LogicExpression $@7 PUNCTUATOR_CLOSE_PARENTHESIS Action ifSuite

  128 $@8: %empty

  129 inst: WHILE PUNCTUATOR_OPEN_PARENTHESIS LogicExpression PUNCTUATOR_CLOSE_PARENTHESIS $@8 Action
  130     | FOR PUNCTUATOR_OPEN_PARENTHESIS FORDecalartion PUNCTUATOR_CLOSE_PARENTHESIS Action
  131     | return_statement

  132 ifSuite: %empty

  133 $@9: %empty

  134 ifSuite: ELSE $@9 Action

  135 ParmetersList: ParmetersList PUNCTUATOR_COMMA Parmeter
  136              | Parmeter

  137 Parmeter: NUMBER
  138         | CONSTSTRING
  139         | REAL
  140         | CHAR
  141         | IDENTIFIER
  142         | %empty

  143 Expression: Expression OPERATOR_PLUS Term
  144           | Expression OPERATOR_MINUS Term
  145           | Term

  146 Term: Term OPERATOR_MULTIPLICATION Fact
  147     | Term OPERATOR_DEVISION Fact
  148     | Fact

  149 Fact: Fact OPERATOR_POWER Fact2
  150     | Fact2

  151 Fact2: REAL
  152      | NUMBER
  153      | PUNCTUATOR_OPEN_PARENTHESIS Expression PUNCTUATOR_CLOSE_PARENTHESIS
  154      | IDENTIFIER

  155 LogicExpression: LogicExpression1
  156                | OPERATOR_NOT LogicExpression1

  157 LogicExpression1: LogicExpression1 OPERATOR_AND LogicExpression2
  158                 | LogicExpression1 OPERATOR_OR LogicExpression2
  159                 | LogicExpression2

  160 LogicExpression2: LogicExpression3
  161                 | PUNCTUATOR_OPEN_PARENTHESIS LogicExpression PUNCTUATOR_CLOSE_PARENTHESIS

  162 LogicExpression3: CHAR OPERATOR_EQUALS CHAR
  163                 | CONSTSTRING OPERATOR_EQUALS CONSTSTRING
  164                 | Expression OPERATOR_EQUALS Expression
  165                 | CHAR OPERATOR_DEFFRENT CHAR
  166                 | CONSTSTRING OPERATOR_DEFFRENT CONSTSTRING
  167                 | Expression OPERATOR_DEFFRENT Expression
  168                 | Expression OPERATOR_INFERIER Expression
  169                 | Expression OPERATOR_INFERIEROREQUALS Expression
  170                 | Expression OPERATOR_SUPERIER Expression
  171                 | Expression OPERATOR_SUPERIEROREQUALS Expression
  172                 | boolvalues
  173                 | IDENTIFIER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
NUMBER (258) 64 67 68 70 71 72 73 75 76 78 79 81 111 117 137 152
REAL (259) 82 84 139 151
CHAR (260) 26 34 40 42 85 87 104 114 140 162 165
CONSTSTRING (261) 48 50 113 138 163 166
IDENTIFIER (262) 1 2 3 4 5 6 19 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 80 83 86 89 98 100 102 104 106 117 120
    121 122 123 124 141 154 173
PARENTHESE_GAUCHE (263)
PARENTHESE_DROITE (264)
BOOL (265) 29 35
DOUBLE (266) 27 32 100
INT (267) 25 31 98
RETURN (268) 111 112 113 114
ELSE (269) 134
STRUCT (270) 19
STRINGTYPE (271) 28 33 102
CHARTYPE (272)
CONST (273) 30
READ (274) 124
TRUEBOOL (275) 52
FALSEBOOL (276) 53
TYPE (277) 14
VAR (278) 20
WHILE (279) 129
WRITE (280) 125
TO (281) 117
FOR (282) 130
FUNCTIONS (283) 92
MAIN (284) 7
IF (285) 127
PROGRAME (286) 1 2 3 4 5 6
VOID (287) 106
OPERATOR_PLUS (288) 143
OPERATOR_MINUS (289) 144
OPERATOR_MULTIPLICATION (290) 146
OPERATOR_DEVISION (291) 147
OPERATOR_POWER (292) 149
OPERATOR_MOD (293)
OPERATOR_INCREMENTATION (294) 122
OPERATOR_DECREMENTATION (295) 123
OPERATOR_EQUALS (296) 162 163 164
OPERATOR_DEFFRENT (297) 165 166 167
OPERATOR_SUPERIER (298) 170
OPERATOR_INFERIER (299) 168
OPERATOR_SUPERIEROREQUALS (300) 171
OPERATOR_INFERIEROREQUALS (301) 169
OPERATOR_AND (302) 157
OPERATOR_OR (303) 158
OPERATOR_NOT (304) 156
PUNCTUATOR_OPEN_PARENTHESIS (305) 98 100 102 104 106 124 125 127 129
    130 153 161
PUNCTUATOR_CLOSE_PARENTHESIS (306) 98 100 102 104 106 124 125 127 129
    130 153 161
PUNCTUATOR_OPEN_CURLY (307) 8 15 19 21 93 98 100 102 104 106 115
PUNCTUATOR_CLOSE_CURLY (308) 8 15 19 21 93 98 100 102 104 106 115
PUNCTUATOR_OPEN_BRACKET (309) 63 64 65 66 67 68 69 70 71 72 73 74 75
    76 77 78
PUNCTUATOR_CLOSE_BRACKET (310) 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78
PUNCTUATOR_COMMA (311) 36 37 40 41 44 45 48 49 54 57 59 60 79 80 82
    83 85 86 88 89 135
PUNCTUATOR_COLON (312)
PUNCTUATOR_SEMICOLON (313) 1 2 3 4 5 6 19 25 26 27 28 29 30 31 32 33
    34 35 111 112 113 114 120 121 122 123 124 125
PUNCTUATOR_ASSIGN (314) 37 39 40 42 45 47 48 50 55 57 58 59 60 61 62
    65 69 74 77 117 120 121


Non-terminaux, suivis des règles où ils apparaissent

$accept (60)
    à gauche: 0
Programe (61)
    à gauche: 1 2 3 4 5 6, à droite: 0
main_struct (62)
    à gauche: 7, à droite: 1 2 3 4 5 6
Action_main (63)
    à gauche: 8 9, à droite: 7
return_statement (64)
    à gauche: 10 11 12 13, à droite: 131
type_struct (65)
    à gauche: 14, à droite: 2 5
Action_type (66)
    à gauche: 15 16, à droite: 14
instList_type (67)
    à gauche: 17 18, à droite: 15 17
inst_type (68)
    à gauche: 19, à droite: 16 17 18
var_struct (69)
    à gauche: 20, à droite: 2 3 5 6
Action_var (70)
    à gauche: 21 22, à droite: 20
instList_var (71)
    à gauche: 23 24, à droite: 19 21 23
inst_var (72)
    à gauche: 25 26 27 28 29 30 31 32 33 34 35, à droite: 22 23 24
    110
declaration_entier (73)
    à gauche: 36 37 38 39, à droite: 25 36 37
declaration_char (74)
    à gauche: 40 41 42 43, à droite: 26 40 41
declaration_real (75)
    à gauche: 44 45 46 47, à droite: 27 44 45
declaration_string (76)
    à gauche: 48 49 50 51, à droite: 28 48 49
boolvalues (77)
    à gauche: 52 53, à droite: 55 88 90 172
declaration_bool (78)
    à gauche: 54 55 56 57 58, à droite: 29 54 57
declaration_const (79)
    à gauche: 59 60 61 62, à droite: 30 59 60
declaration_tabint (80)
    à gauche: 63 64 65 66 67, à droite: 31
declaration_tabreal (81)
    à gauche: 68 69 70, à droite: 32
declaration_tabstring (82)
    à gauche: 71 72, à droite: 33
declaration_tabchar (83)
    à gauche: 73 74 75, à droite: 34
declaration_tabbool (84)
    à gauche: 76 77 78, à droite: 35
element_tabint (85)
    à gauche: 79 80 81, à droite: 65 79 80
element_tabreal (86)
    à gauche: 82 83 84, à droite: 69 82 83
element_tabchar (87)
    à gauche: 85 86 87, à droite: 74 85 86
element_tabbool (88)
    à gauche: 88 89 90, à droite: 77 88 89
functions_struct (89)
    à gauche: 92, à droite: 2 3 4
$@1 (90)
    à gauche: 91, à droite: 92
Action_function (91)
    à gauche: 93 94, à droite: 92
List_function (92)
    à gauche: 95 96, à droite: 93 95
function (93)
    à gauche: 98 100 102 104 106, à droite: 94 95 96
$@2 (94)
    à gauche: 97, à droite: 98
$@3 (95)
    à gauche: 99, à droite: 100
$@4 (96)
    à gauche: 101, à droite: 102
$@5 (97)
    à gauche: 103, à droite: 104
$@6 (98)
    à gauche: 105, à droite: 106
instList_function (99)
    à gauche: 107 108, à droite: 98 100 102 104 106 107
inst_function (100)
    à gauche: 109 110, à droite: 107 108
return_statement_int (101)
    à gauche: 111, à droite: 10 98
return_statement_double (102)
    à gauche: 112, à droite: 11 100
return_statement_string (103)
    à gauche: 113, à droite: 12 102
return_statement_char (104)
    à gauche: 114, à droite: 13 104
Action (105)
    à gauche: 115 116, à droite: 127 129 130 134
FORDecalartion (106)
    à gauche: 117, à droite: 130
instList (107)
    à gauche: 118 119, à droite: 8 115 118
inst (108)
    à gauche: 120 121 122 123 124 125 127 129 130 131, à droite:
    9 109 116 118 119
$@7 (109)
    à gauche: 126, à droite: 127
$@8 (110)
    à gauche: 128, à droite: 129
ifSuite (111)
    à gauche: 132 134, à droite: 127
$@9 (112)
    à gauche: 133, à droite: 134
ParmetersList (113)
    à gauche: 135 136, à droite: 98 100 102 104 106 125 135
Parmeter (114)
    à gauche: 137 138 139 140 141 142, à droite: 135 136
Expression (115)
    à gauche: 143 144 145, à droite: 37 39 45 47 60 61 63 66 112
    117 120 143 144 153 164 167 168 169 170 171
Term (116)
    à gauche: 146 147 148, à droite: 143 144 145 146 147
Fact (117)
    à gauche: 149 150, à droite: 146 147 148 149
Fact2 (118)
    à gauche: 151 152 153 154, à droite: 149 150
LogicExpression (119)
    à gauche: 155 156, à droite: 57 58 59 62 121 127 129 161
LogicExpression1 (120)
    à gauche: 157 158 159, à droite: 155 156 157 158
LogicExpression2 (121)
    à gauche: 160 161, à droite: 157 158 159
LogicExpression3 (122)
    à gauche: 162 163 164 165 166 167 168 169 170 171 172 173, à droite:
    160


État 0

    0 $accept: . Programe $end

    PROGRAME  décalage et aller à l'état 1

    Programe  aller à l'état 2


État 1

    1 Programe: PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON main_struct
    2         | PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON type_struct var_struct functions_struct main_struct
    3         | PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON var_struct functions_struct main_struct
    4         | PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON functions_struct main_struct
    5         | PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON type_struct var_struct main_struct
    6         | PROGRAME . IDENTIFIER PUNCTUATOR_SEMICOLON var_struct main_struct

    IDENTIFIER  décalage et aller à l'état 3


État 2

    0 $accept: Programe . $end

    $end  décalage et aller à l'état 4


État 3

    1 Programe: PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON main_struct
    2         | PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON type_struct var_struct functions_struct main_struct
    3         | PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON var_struct functions_struct main_struct
    4         | PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON functions_struct main_struct
    5         | PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON type_struct var_struct main_struct
    6         | PROGRAME IDENTIFIER . PUNCTUATOR_SEMICOLON var_struct main_struct

    PUNCTUATOR_SEMICOLON  décalage et aller à l'état 5


État 4

    0 $accept: Programe $end .

    $défaut  accepter


État 5

    1 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . main_struct
    2         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . type_struct var_struct functions_struct main_struct
    3         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . var_struct functions_struct main_struct
    4         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . functions_struct main_struct
    5         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . type_struct var_struct main_struct
    6         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON . var_struct main_struct

    TYPE  décalage et aller à l'état 6
    VAR   décalage et aller à l'état 7
    MAIN  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 91 ($@1)

    main_struct       aller à l'état 9
    type_struct       aller à l'état 10
    var_struct        aller à l'état 11
    functions_struct  aller à l'état 12
    $@1               aller à l'état 13


État 6

   14 type_struct: TYPE . Action_type

    STRUCT                 décalage et aller à l'état 14
    PUNCTUATOR_OPEN_CURLY  décalage et aller à l'état 15

    Action_type  aller à l'état 16
    inst_type    aller à l'état 17


État 7

   20 var_struct: VAR . Action_var

    CHAR                   décalage et aller à l'état 18
    BOOL                   décalage et aller à l'état 19
    DOUBLE                 décalage et aller à l'état 20
    INT                    décalage et aller à l'état 21
    STRINGTYPE             décalage et aller à l'état 22
    CONST                  décalage et aller à l'état 23
    PUNCTUATOR_OPEN_CURLY  décalage et aller à l'état 24

    Action_var  aller à l'état 25
    inst_var    aller à l'état 26


État 8

    7 main_struct: MAIN . Action_main

    IDENTIFIER             décalage et aller à l'état 27
    RETURN                 décalage et aller à l'état 28
    READ                   décalage et aller à l'état 29
    WHILE                  décalage et aller à l'état 30
    WRITE                  décalage et aller à l'état 31
    FOR                    décalage et aller à l'état 32
    IF                     décalage et aller à l'état 33
    PUNCTUATOR_OPEN_CURLY  décalage et aller à l'état 34

    Action_main              aller à l'état 35
    return_statement         aller à l'état 36
    return_statement_int     aller à l'état 37
    return_statement_double  aller à l'état 38
    return_statement_string  aller à l'état 39
    return_statement_char    aller à l'état 40
    inst                     aller à l'état 41


État 9

    1 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON main_struct .

    $défaut  réduction par utilisation de la règle 1 (Programe)


État 10

    2 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON type_struct . var_struct functions_struct main_struct
    5         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON type_struct . var_struct main_struct

    VAR  décalage et aller à l'état 7

    var_struct  aller à l'état 42


État 11

    3 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON var_struct . functions_struct main_struct
    6         | PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON var_struct . main_struct

    MAIN  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 91 ($@1)

    main_struct       aller à l'état 43
    functions_struct  aller à l'état 44
    $@1               aller à l'état 13


État 12

    4 Programe: PROGRAME IDENTIFIER PUNCTUATOR_SEMICOLON functions_struct . main_struct

    MAIN  décalage et aller à l'état 8

    main_struct  aller à l'état 45


État 13

   92 functions_struct: $@1 . FUNCTIONS Action_function

    FUNCTIONS  décalage et aller à l'état 46


État 14

   19 inst_type: STRUCT . IDENTIFIER PUNCTUATOR_OPEN_CURLY instList_var PUNCTUATOR_CLOSE_CURLY PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 47


État 15

   15 Action_type: PUNCTUATOR_OPEN_CURLY . instList_type PUNCTUATOR_CLOSE_CURLY

    STRUCT  décalage et aller à l'état 14

    instList_type  aller à l'état 48
    inst_type      aller à l'état 49


État 16

   14 type_struct: TYPE Action_type .

    $défaut  réduction par utilisation de la règle 14 (type_struct)


État 17

   16 Action_type: inst_type .

    $défaut  réduction par utilisation de la règle 16 (Action_type)


État 18

   26 inst_var: CHAR . declaration_char PUNCTUATOR_SEMICOLON
   34         | CHAR . declaration_tabchar PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 50

    declaration_char     aller à l'état 51
    declaration_tabchar  aller à l'état 52


État 19

   29 inst_var: BOOL . declaration_bool PUNCTUATOR_SEMICOLON
   35         | BOOL . declaration_tabbool PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 53

    declaration_bool     aller à l'état 54
    declaration_tabbool  aller à l'état 55


État 20

   27 inst_var: DOUBLE . declaration_real PUNCTUATOR_SEMICOLON
   32         | DOUBLE . declaration_tabreal PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 56

    declaration_real     aller à l'état 57
    declaration_tabreal  aller à l'état 58


État 21

   25 inst_var: INT . declaration_entier PUNCTUATOR_SEMICOLON
   31         | INT . declaration_tabint PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 59

    declaration_entier  aller à l'état 60
    declaration_tabint  aller à l'état 61


État 22

   28 inst_var: STRINGTYPE . declaration_string PUNCTUATOR_SEMICOLON
   33         | STRINGTYPE . declaration_tabstring PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 62

    declaration_string     aller à l'état 63
    declaration_tabstring  aller à l'état 64


État 23

   30 inst_var: CONST . declaration_const PUNCTUATOR_SEMICOLON

    IDENTIFIER  décalage et aller à l'état 65

    declaration_const  aller à l'état 66


État 24

   21 Action_var: PUNCTUATOR_OPEN_CURLY . instList_var PUNCTUATOR_CLOSE_CURLY

    CHAR        décalage et aller à l'état 18
    BOOL        décalage et aller à l'état 19
    DOUBLE      décalage et aller à l'état 20
    INT         décalage et aller à l'état 21
    STRINGTYPE  décalage et aller à l'état 22
    CONST       décalage et aller à l'état 23

    instList_var  aller à l'état 67
    inst_var      aller à l'état 68


État 25

   20 var_struct: VAR Action_var .

    $défaut  réduction par utilisation de la règle 20 (var_struct)


État 26

   22 Action_var: inst_var .

    $défaut  réduction par utilisation de la règle 22 (Action_var)


État 27

  120 inst: IDENTIFIER . PUNCTUATOR_ASSIGN Expression PUNCTUATOR_SEMICOLON
  121     | IDENTIFIER . PUNCTUATOR_ASSIGN LogicExpression PUNCTUATOR_SEMICOLON
  122     | IDENTIFIER . OPERATOR_INCREMENTATION PUNCTUATOR_SEMICOLON
  123     | IDENTIFIER . OPERATOR_DECREMENTATION PUNCTUATOR_SEMICOLON

    OPERATOR_INCREMENTATION  décalage et aller à l'état 69
    OPERATOR_DECREMENTATION  décalage et aller à l'état 70
    PUNCTUATOR_ASSIGN        décalage et aller à l'état 71


État 28

  111 return_statement_int: RETURN . NUMBER PUNCTUATOR_SEMICOLON
  112 return_statement_double: RETURN . Expression PUNCTUATOR_SEMICOLON
  113 return_statement_string: RETURN . CONSTSTRING PUNCTUATOR_SEMICOLON
  114 return_statement_char: RETURN . CHAR PUNCTUATOR_SEMICOLON

    NUMBER                       décalage et aller à l'état 72
    REAL                         décalage et aller à l'état 73
    CHAR                         décalage et aller à l'état 74
    CONSTSTRING                  décalage et aller à l'état 75
    IDENTIFIER                   décalage et aller à l'état 76
    PUNCTUATOR_OPEN_PARENTHESIS  décalage et aller à l'état 77

    Expression  aller à l'état 78
    Term        aller à l'état 79
    Fact        aller à l'état 80
    Fact2       aller à l'état 81


État 29

  124 inst: READ . PUNCTUATOR_OPEN_PARENTHESIS IDENTIFIER PUNCTUATOR_CLOSE_PARENTHESIS PUNCTUATOR_SEMICOLON

    PUNCTUATOR_OPEN_PARENTHESIS  décalage et aller à l'état 82


État 30
